Big commit! Mine is 9-inches

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
-SESSION_SECRET="super-duper-s3cret"
+DATABASE_URL="mysql://root:pASSword@localhost:3306/oceanic"
+MONGODB_URL="mongodb://127.0.0.1:27017/oceanic?directConnection=true&serverSelectionTimeoutMS=2000"
+
+NODE_ENV="development"
+SERVER_URL="http://localhost:3000"
+
+SESSION_SECRET="yp7cV8qrMAs3txy7Areb8Wj5d@tc0@y"
+
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
