--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write .",
     "format:repo": "npm run format && npm run lint -- --fix",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "setup": "prisma generate && prisma migrate deploy && prisma db seed",
+    "setup": "prisma generate && prisma migrate deploy && prisma db seed && npm run generate:prisma",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
     "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
     "test": "vitest",
@@ -21,7 +21,9 @@
     "pretest:e2e:run": "npm run build",
     "test:e2e:run": "cross-env PORT=8811 start-server-and-test start:mocks http://localhost:8811 \"npx cypress run\"",
     "typecheck": "tsc && tsc -p cypress",
-    "validate": "npm-run-all --parallel \"test -- --run\" lint typecheck test:e2e:run"
+    "validate": "npm-run-all --parallel \"test -- --run\" lint typecheck test:e2e:run",
+    "generate:prisma": "npx prisma generate && npx prisma generate --schema=prisma/mongo.prisma",
+    "seed": "pnpm prisma db seed"
   },
   "eslintIgnore": [
     "/node_modules",
@@ -40,14 +42,19 @@
     "chokidar": "^3.6.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "csv-parse": "^5.6.0",
+    "dayjs": "^1.11.13",
     "express": "^4.21.0",
+    "ioredis": "^5.6.1",
     "isbot": "^5.1.17",
     "morgan": "^1.10.0",
     "prom-client": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "source-map-support": "^0.5.21",
-    "tiny-invariant": "^1.3.3"
+    "tiny-invariant": "^1.3.3",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.3",
